# leaddbs

./: .artenolis.yml  .dropbox  .gitattributes  .gitignore  .gitmodules  .version.txt  CITATION.cff  CMakeLists.txt  LICENSE  LICENSE.md  Press Space or double-click to edit.mup  README.md  activation_model_3v.mat  anatomy_scene_dense.fig  anatomy_scene_sparse.fig  autocoord_batch_optimpriors.m  autocoord_side.m  autocoord_v2.m  clinical_score_generator.mlapp  crop_nii_test.m  defaultoptions.m  detroot_andy.m  dicom_to_bids.mlapp  dragdemo.m  eAuto.fig  eAuto.m  eAuto_batch.m  eAuto_batch_Abstract.m  eAuto_batch_hardnuts.m  eAuto_batch_henning.m  eAuto_batch_katharina.m  eAuto_batch_pub.m  eAuto_batch_pub_tmp.m  eAuto_batch_schlotte.m  eAuto_batch_working.m  ea_absor.m  ea_activecontacts.m  ea_add_overlay.m  ea_add_overlay_interp.m  ea_add_overlay_singlefile.m  (+504 more)
.artenolis/: runtests.sh
AlphaOmega/: qSlicerAlphaOmegaModule.cxx  qSlicerAlphaOmegaModuleWidget.cxx
LeadOR/: LeadOR.py
Lead_manual/: Acquiring and Setting Atlases.md  Creating the 3D Scene.md  Formatting the Image File Names.md  Installation.md  Lead-DBS Main Window and Loading Images.md  Normalization of Images.md  README.md  Reconstruction of Electrode Trajectory.md  SUMMARY.md  Setting a Path for _Lead-DBS_ in MATLAB.md  automatic_reconstruction.md  checking_the_coregistration.md  customizing_atlas_visualization.md  manual_reconstruction.md
MixedFibers/: ea_nii2fv_v2.m  example_conversion.m  mixed_fibers.mlapp
NewExplorer/: Copy_2_of_ea_explorer_lite.mlapp  ea_explorer20.mlapp  ea_explorer_calcfibervals.m  ea_explorer_calcstats.m  ea_explorer_cleanfigure.m  ea_explorer_exportefieldmapping.m  ea_explorer_isocolors.m  ea_explorer_lite.mlapp  ea_explorer_loadmodel.mlapp  ea_explorer_method2methodid.m  ea_explorer_roi.m  ea_explorer_visualizefibers.m  ea_explorer_visualizevoxels.m  ea_explorerclass.m  launchmyapp.m
SlicerNetstimLib/: LeadSubjectORScene.py
cfg/: ea_cfg.m  (+10 more)
ext_libs/SlicerNetstim/: .gitignore  CMakeLists.txt  README.md
ext_libs/SlicerNetstim/AlphaOmega/: CMakeLists.txt  qAlphaOmegaStatusThread.cxx  qAlphaOmegaStatusThread.h  qSlicerAlphaOmegaModule.cxx  qSlicerAlphaOmegaModule.h  qSlicerAlphaOmegaModuleWidget.cxx  qSlicerAlphaOmegaModuleWidget.h
ext_libs/SlicerNetstim/AlphaOmega/Logic/: CMakeLists.txt  vtkSlicerAlphaOmegaLogic.cxx  vtkSlicerAlphaOmegaLogic.h
ext_libs/SlicerNetstim/AlphaOmega/MRML/: vtkMRMLAlphaOmegaChannelNode.cxx  vtkMRMLAlphaOmegaChannelNode.h
ext_libs/SlicerNetstim/AlphaOmega/Resources/: qSlicerAlphaOmegaModule.qrc
ext_libs/SlicerNetstim/AlphaOmega/Resources/UI/: qSlicerAlphaOmegaFooBarWidget.ui  qSlicerAlphaOmegaModuleWidget.ui
ext_libs/SlicerNetstim/AlphaOmega/Widgets/: qSlicerAlphaOmegaFooBarWidget.cxx  qSlicerAlphaOmegaFooBarWidget.h
ext_libs/SlicerNetstim/CompositeToGridTransform/: CMakeLists.txt  CompositeToGridTransform.cxx  CompositeToGridTransform.xml
ext_libs/SlicerNetstim/Documentation/QuickStartGuide/: README.md
ext_libs/SlicerNetstim/FiducialRegistrationVariableRBF/: CMakeLists.txt  FiducialRegistrationVariableRBF.cxx  FiducialRegistrationVariableRBF.xml
ext_libs/SlicerNetstim/ImportACPCAutodetect/: CMakeLists.txt  ImportACPCAutodetect.py
ext_libs/SlicerNetstim/ImportACPCAutodetect/Resources/UI/: ImportACPCAutodetect.ui
ext_libs/SlicerNetstim/ImportAtlas/: CMakeLists.txt  ImportAtlas.py
ext_libs/SlicerNetstim/ImportAtlas/Resources/: .gitignore  previousDirectory.txt
ext_libs/SlicerNetstim/ImportSubject/: CMakeLists.txt  ImportSubject.py
ext_libs/SlicerNetstim/LeadOR/: CMakeLists.txt  LeadOR.py  README.md
ext_libs/SlicerNetstim/LeadOR/LeadORLib/: getMFRwave_clus.m  get_is_cluster.m  h5_wc_reader.m  util.py
ext_libs/SlicerNetstim/LeadOR/LeadORLib/Widgets/: tables.py
ext_libs/SlicerNetstim/LeadOR/Resources/UI/: LeadOR.ui
ext_libs/SlicerNetstim/NetstimPreferences/: CMakeLists.txt  NetstimPreferences.py
ext_libs/SlicerNetstim/NetstimPreferences/Resources/UI/: NetstimPreferences.ui
ext_libs/SlicerNetstim/SlicerNetstimLib/: LeadSubjectAnatToFrame.py  LeadSubjectORScene.py  NORAPipeline.py  util.py
ext_libs/SlicerNetstim/SmudgeModule/: CMakeLists.txt  SmudgeModule.py
ext_libs/SlicerNetstim/SmudgeModule/Helpers/: Effect.py  FunctionsUtil.py  PointerEffect.py  Toolbar.py  WarpEffect.py  WarpEffectParameters.py  treeView.py
ext_libs/SlicerNetstim/StereotacticPlan/: CMakeLists.txt  StereotacticPlan.py
ext_libs/SlicerNetstim/StereotacticPlan/Resources/UI/: StereotacticPlan.ui
ext_libs/SlicerNetstim/StereotacticPlan/StereotacticPlanLib/: util.py
ext_libs/SlicerNetstim/StereotacticPlan/StereotacticPlanLib/ImportFrom/: Import_From_Brainlab.py  Import_From_ROSA.py  importerBase.py
ext_libs/SlicerNetstim/StereotacticPlan/StereotacticPlanLib/Widgets/: CustomWidgets.py
ext_libs/SlicerNetstim/TransformsUtil/: CMakeLists.txt  TransformsUtil.py
ext_libs/SlicerNetstim/WarpDrive/: CMakeLists.txt  README.md  WarpDrive.py
ext_libs/SlicerNetstim/WarpDrive/Resources/UI/: WarpDrive.ui
ext_libs/SlicerNetstim/WarpDrive/WarpDriveLib/Effects/: CircleEffect.py  DrawEffect.py  Effect.py  PointToPointEffect.py  PointerEffect.py  ShrinkExpandEffect.py
ext_libs/SlicerNetstim/WarpDrive/WarpDriveLib/Helpers/: GridNodeHelper.py  LeadDBSCall.py  WarpDriveUtil.py
ext_libs/SlicerNetstim/WarpDrive/WarpDriveLib/Tools/: DrawTool.py  NoneTool.py  PointToPointTool.py  ShrinkExpandTool.py  SmudgeTool.py
ext_libs/SlicerNetstim/WarpDrive/WarpDriveLib/Widgets/: Buttons.py  Tables.py  ToolWidget.py  Toolbar.py  TreeView.py
ext_libs/SlicerNetstim/WarpDrive/WarpDriveLibLocal/Effects/: CircleEffect.py  DrawEffect.py  PointToPointEffect.py  PointerEffect.py
ext_libs/SlicerNetstim/WarpDrive/WarpDriveLibLocal/Helpers/: LeadDBSCall.py
ext_libs/SlicerNetstim/WarpDrive/WarpDriveLibLocal/Tools/: DrawTool.py
ext_libs/SlicerNetstim/WarpDrive/WarpDriveLibLocal/Widgets/: Tables.py  ToolWidget.py  Toolbar.py
ext_libs/SlicerNetstim/fiducialRegistrationVariableRBF/: CMakeLists.txt  fiducialRegistrationVariableRBF.cxx  fiducialRegistrationVariableRBF.xml
(+6692 files in other folders)
